# Eel

./: README.md  TODO.txt  pyproject.toml
examples/07 - CreateReactApp/: README.md  eel_CRA.py
examples/07 - CreateReactApp/public/: index.html
examples/07 - CreateReactApp/src/: App.tsx
