[tool.poetry]
name = "eel"
version = "0.0.0"
description = "NA"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bottle = "^0.12.16"
bottle-websocket = "^0.2.9"
future = "^0.17.1"
whichcraft = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
